cmd/bosc/tests/owned_scalar_borrow_after_dispose_err_test.bos
package main

import "fmt"

fn describe(i i64) {
	fmt.print("v %d\n", i)
}

fn main() {
	handle owned i64 := 10
	b i64 := handle
	dispose(handle) // resource gone
	describe(b)     // error: b views a disposed resource
}
